Update gitignore and include APK

--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,18 @@
 **/ios/Runner/GeneratedPluginRegistrant.*
 **/android/.gradle/
 **/android/app/build/
+**/android/local.properties
+**/android/**/key.properties
+**/android/**/keystore.jks
+**/android/**/keystore.properties
+**/android/**/upload-keystore.jks
+**/ios/Pods/
+**/ios/.symlinks/
+**/ios/DerivedData/
+**/macos/Flutter/ephemeral/
+**/macos/Pods/
+**/windows/flutter/ephemeral/
+**/linux/flutter/ephemeral/
 
 # IDE files
 **/.idea/
