--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,8 @@ flutter_sdk/
 **/yarn-debug.log*
 **/yarn-error.log*
 _upload/
+
+# Allow release APK artifacts to be committed
+!artifacts/
+!artifacts/apk/
+!artifacts/apk/*.apk
